Pinned pip to use global pin

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - openssl
     - zlib             {{ zlib }}
     - pytorch-base     {{ pytorch }}
-    - pip
+    - pip {{ pip }}
   run:
     - python
     - pytorch-base     {{ pytorch }}
