--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   git_rev: v{{version}}
 
 build:
-  number: 0
+  number: 1
   string: py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed . -vv
 
@@ -23,6 +23,7 @@ requirements:
     - openssl
     - zlib             {{ zlib }}
     - pytorch-base     {{ pytorch }}
+    - pip
 
   run:
     - python
